fix: responsive sidebar.  close on small screen.

--- a/templates/assets/css/vlabs-style.css
+++ b/templates/assets/css/vlabs-style.css
@@ -67,6 +67,8 @@
     border-right: 2px dotted #89a7c4;
     font-size: 1.2rem;
     font-weight: bold;
+    overflow-x: hidden;
+    width: 0px;
 }
 
 .vlabs-header a {
@@ -149,13 +151,6 @@ h3 {
     padding-top: 56.25%;
 }
 
-
-iframe {
-    width: 100%;
-    padding-right: 4rem;
-    height: 550px;  
-}
-
 .responsive-iframe {
     position: absolute;
     top: 0;
@@ -166,8 +161,12 @@ iframe {
     height: 100%;
 }
 
-@media screen and (min-width: 768px) {
-    .navbar-toggler {
-	display: none;
-    }
+.visible {
+    width: max-content;
+}
+
+.hidden {
+    width: 0px;
+    border-width: 0px;
+    padding: 0px;
 }
